# tig-swarm-demo

./: .dockerignore  .gitattributes  .gitignore  .ignore  AGENTS.md  AGENTS.md.template  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.template  Cargo.toml  DASHBOARD_PLAN.md  Dockerfile.cpu  Dockerfile.gpu  README.md  SANDBOX_SPEC.md  c3_bench_once.py  fleet.config.example.json  requirements.txt  run.py  setup.py
dashboard/: benchmark.html  diversity.html  ideas.html  index.html  leaderboard.html  package-lock.json  package.json  trajectories.html  vite.config.ts
dashboard/src/: main-benchmark.ts  main-diversity.ts  main-ideas.ts  main-trajectories.ts  main.ts  mock.ts  style.css  types.ts
datasets/energy_arbitrage/: test.json
datasets/job_scheduling/: test.json
datasets/knapsack/: test.json
datasets/satisfiability/: test.json
datasets/vehicle_routing/: test.json
docs/: trajectory-search-explainer.md
initial_algorithms/: README.md  energy_arbitrage.rs  hypergraph.rs  job_scheduling.rs  knapsack.rs  neuralnet_optimizer.rs  satisfiability.rs  vector_search.rs  vehicle_routing.rs
initial_algorithms/knapsack/: mod.rs
initial_algorithms/satisfiability/: mod.rs
initial_algorithms/vehicle_routing/: mod.rs  (+1 more)
scripts/: admin_reset_challenge.py  agentic_backends.py  agentic_sandbox.py  benchmark.py  build_ptx.py  c3_compute.py  challenge_files.py  download_algorithm.py  dump_trajectories.py  init_fleet.py  list_models.py  llm_backends.py  prompts.py  publish.py  run_fleet.py  run_loop.py  server.py  sync_identity.py  test_benchmark_run_ids.py
server/: api_models.py  challenges.py  db.py  models.py  server.py  static  test_inactive_pool_negative_gate.py  test_inactive_pool_single_edit_gate.py  test_infeasible_floor_trap.py  test_inspiration_matrix.py  tiers.py  ws_events.py
src/: lib.rs  main_evaluator.rs  main_generator.rs  main_gpu_benchmark.rs  main_solver.rs
tests/: test_llm_backends.py
(+91 files in other folders)
