[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
edition = "2021"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.81"
clap = "4.5.4"
blake3 = "1.5.4"
paste = "1.0.15"
ndarray = "0.15.6"
rand = { version = "0.8.6", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
rand_distr = "0.4.3"
rayon = {version= "1.10", optional = true}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = "0.18.0"
# Compressed-binary serde used by SAT, knapsack and energy_arbitrage; and
# nalgebra is used by energy_arbitrage's DC power-flow utilities.
base64 = "0.21"
bincode = "1.3"
flate2 = "1.0"
nalgebra = "0.33"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }

[[bin]]
name = "tig_generator"
path = "src/main_generator.rs"
required-features = ["generator"]

[[bin]]
name = "tig_solver"
path = "src/main_solver.rs"
required-features = ["solver"]

[[bin]]
name = "tig_evaluator"
path = "src/main_evaluator.rs"
required-features = ["evaluator"]

[[bin]]
name = "tig_gpu_benchmark"
path = "src/main_gpu_benchmark.rs"
required-features = ["gpu_benchmark"]

[features]
satisfiability = []
vehicle_routing = []
knapsack = []
job_scheduling = []
energy_arbitrage = []
hypergraph = ["cudarc"]
neuralnet_optimizer = ["cudarc", "cudarc/cublas", "cudarc/cudnn"]
vector_search = ["cudarc"]

# Convenience feature sets for the bins. Each binary needs at least one
# challenge feature enabled — pick e.g. `--features solver,knapsack`.
generator = ["rayon"]
evaluator = []
solver = []
baseline = []
gpu_benchmark = []
